--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "devDependencies": {
     "babel-preset-es2015": "^6.1.18",
     "gulp": "^3.9.0",
+    "gulp-babel": "^6.1.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.1.0",
     "gulp-util": "^3.0.7",
-    "webpack": "^1.12.4",
-    "webpack-dev-server": "^1.12.1"
+    "gulp-webserver": "^0.9.1"
   }
 }
